Frontend connection correction

--- a/client/src/app/lawyer/lawyer.component.html
+++ b/client/src/app/lawyer/lawyer.component.html
@@ -3,6 +3,6 @@
 </p>
 <div class="container">
   <div *ngFor = "let lawyer of lawyers">
-    {{lawyer.name}}<br>{{lawyer.phone}}<br><br><br><br><br><br>
+    {{lawyer.name}}<br>{{lawyer.phone}}<br>{{lawyer.type}}<br>{{lawyer.slotdate}}<br>{{lawyer.slottime}}<br><br><br><br><br><br>
   </div>
 </div>
