--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,6 @@
-<h1 class="animated bounce">
+<h1 class="animated rollIn">
   {{title}}
-</h1><br><br>
-
-
-
-
+</h1>
+<br>
+<br>
 <app-lawyer></app-lawyer>
