ha ha this slight correction

--- a/client/src/app/lawyer/lawyer.component.css
+++ b/client/src/app/lawyer/lawyer.component.css
@@ -1,2 +1,7 @@
 p {text-align:center;}
 table {text-align: center;}
+tr {text-align: center;}
+td {text-align: center;}
+th {text-align: center;}
+h1 {text-align: center;}
+input {text-align: center;}
